--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Pig Game</title>
+    <title>Tengu</title>
   </head>
   <body>
     <main>
@@ -30,6 +30,7 @@
       </section>
 
       <img src="dice-5.png" alt="Playing dice" class="dice" />
+      <!-- <img src="dice-5.png" alt="Playing dice" class="card" /> -->
       <button class="btn btn--new">🆕 New game</button>
       <button class="btn btn--roll">🃏 Draw Card</button>
       <button class="btn btn--hold">⏹️ Hold</button>
