--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Tengu</title>
   </head>
   <body>
+    <!-- <div class="top-bar"></div> -->
+    <h1 class="about">About</h1>
+    <button class="btn btn--new">🆕 New game</button>
     <main>
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1 <br />Total Score:</h2>
-        <p class="score" id="score--0">43</p>
+        <p class="score" id="score--0">0</p>
         <div class="current">
           <p class="current-label">Current round:</p>
           <p class="current-score" id="current--0">0</p>
@@ -22,7 +25,7 @@
           Player 2 <br />
           Total Score:
         </h2>
-        <p class="score" id="score--1">24</p>
+        <p class="score" id="score--1">0</p>
         <div class="current">
           <p class="current-label">Current round:</p>
           <p class="current-score" id="current--1">0</p>
@@ -31,10 +34,21 @@
 
       <img src="dice-5.png" alt="Playing dice" class="dice" />
       <!-- <img src="dice-5.png" alt="Playing dice" class="card" /> -->
-      <button class="btn btn--new">🆕 New game</button>
+      <button class="btn btn--spell">🔮 Use Spell</button>
       <button class="btn btn--roll">🃏 Draw Card</button>
       <button class="btn btn--hold">⏹️ Hold</button>
     </main>
+    <div class="modal-about hidden">
+      <button class="close-modal">&times;</button>
+      <h1>About</h1>
+      <p style="font-size: 2rem">
+        This is a game. Programming by Tai Arima. Art by Sayalee Karkare.
+        <br />
+        Copyright © 2023 Tai Arima <br />
+        ALL RIGHTS RESERVED
+      </p>
+    </div>
+    <div class="overlay hidden"></div>
     <script src="script.js"></script>
   </body>
 </html>
