Finished essential functionalities of cards.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <img src="dice-5.png" alt="Playing dice" class="dice" />
       <!-- <img src="dice-5.png" alt="Playing dice" class="card" /> -->
-      <button class="btn btn--spell">🔮 Use Spell</button>
+      <button class="btn btn--spell hidden">🔮 Use Spell</button>
       <button class="btn btn--roll">🃏 Draw Card</button>
       <button class="btn btn--hold">⏹️ Hold</button>
     </main>
