Added log, messages not added yet.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <!-- <div class="top-bar"></div> -->
+    <textarea class="log hidden" readonly>
+ This is where I will log the game events.
+      </textarea
+    >
     <h1 class="about">About</h1>
     <button class="btn btn--new">🆕 New game</button>
     <main>
@@ -35,9 +39,10 @@
       <img src="dice-5.png" alt="Playing dice" class="dice" />
       <!-- <img src="dice-5.png" alt="Playing dice" class="card" /> -->
       <button class="btn btn--spell hidden">🔮 Use Spell</button>
-      <button class="btn btn--roll">🃏 Draw Card</button>
+      <button class="btn btn--draw">🀄 Draw Card</button>
       <button class="btn btn--hold">⏹️ Hold</button>
     </main>
+    <button class="btn btn--log">📜 Show log</button>
     <div class="modal-about hidden">
       <button class="close-modal">&times;</button>
       <h1>About</h1>
