Added basic log feature. Need to add kasajizou.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   </head>
   <body>
     <!-- <div class="top-bar"></div> -->
-    <textarea class="log hidden" readonly>
- This is where I will log the game events.
-      </textarea
-    >
+    <textarea class="log hidden" readonly></textarea>
     <h1 class="about">About</h1>
+    <img src="tenguCenter.png" class="tengu-img" />
     <button class="btn btn--new">🆕 New game</button>
     <main>
       <section class="player player--0 player--active">
@@ -36,11 +34,11 @@
         </div>
       </section>
 
-      <img src="dice-5.png" alt="Playing dice" class="dice" />
+      <img src="cardBack.png" alt="Magical cards" class="card" />
       <!-- <img src="dice-5.png" alt="Playing dice" class="card" /> -->
       <button class="btn btn--spell hidden">🔮 Use Spell</button>
-      <button class="btn btn--draw">🀄 Draw Card</button>
-      <button class="btn btn--hold">⏹️ Hold</button>
+      <button class="btn btn--draw hidden">🀄 Draw Card</button>
+      <button class="btn btn--hold hidden">⏹️ Hold</button>
     </main>
     <button class="btn btn--log">📜 Show log</button>
     <div class="modal-about hidden">
