Added some things. Still a lot of TODOs.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <textarea class="log hidden" readonly></textarea>
     <h1 class="about">About</h1>
     <img src="tenguCenter.png" class="tengu-img" />
-    <button class="btn btn--new">🆕 New game</button>
     <main>
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1 <br />Total Score:</h2>
@@ -36,11 +35,12 @@
 
       <img src="cardBack.png" alt="Magical cards" class="card" />
       <!-- <img src="dice-5.png" alt="Playing dice" class="card" /> -->
+      <button class="btn btn--new">🆕 New game</button>
       <button class="btn btn--spell hidden">🔮 Use Spell</button>
       <button class="btn btn--draw hidden">🀄 Draw Card</button>
       <button class="btn btn--hold hidden">⏹️ Hold</button>
     </main>
-    <button class="btn btn--log">📜 Show log</button>
+    <button class="btn btn--log hidden">📜 Show log</button>
     <div class="modal-about hidden">
       <button class="close-modal">&times;</button>
       <h1>About</h1>
