Start and end game states seem to work now.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <button class="btn btn--spell hidden">🔮 Use Spell</button>
       <button class="btn btn--draw hidden">🀄 Draw Card</button>
       <button class="btn btn--hold hidden">⏹️ Hold</button>
+      <button class="btn btn--turn hidden">▶️ Start next turn</button>
     </main>
     <button class="btn btn--log hidden">📜 Show log</button>
     <div class="modal-about hidden">
