--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1 <br />Total Score:</h2>
         <p class="score" id="score--0">0</p>
+        <p class="round-msg hidden" id="msg--0">Player 1 wins!</p>
         <div class="current">
           <p class="current-label">Current round:</p>
           <p class="current-score" id="current--0">0</p>
@@ -27,6 +28,7 @@
           Total Score:
         </h2>
         <p class="score" id="score--1">0</p>
+        <p class="round-msg hidden" id="msg--1">Player 2 wins!</p>
         <div class="current">
           <p class="current-label">Current round:</p>
           <p class="current-score" id="current--1">0</p>
