--- a/index.html
+++ b/index.html
@@ -64,3 +64,14 @@
     <script src="script.js"></script>
   </body>
 </html>
+<!-- TENGU is a competitive game of strategy and chance where two players face-off to see who can earn more points. 
+  A player begins their turn by drawing one card. Each card has an associated point value, and may have additional effects, or a spell that 
+  the player can use if they wish. Read the cards carefully to make sure you understand each card's effects and spells.
+  After drawing a card, you can decide to draw another card, or "hold". If you decide to "hold", your current score will be added to your total score,
+  and the next player's turn will begin. A player's turn continues until they decide to "hold" or until they draw the TENGU! Beware of the TENGU! If you draw
+  the TENGU card, you lose all points you earned this round and your turn is over. The game continues for five or ten rounds (as determined by user settings),
+  and the player who has the most points after the final round wins! The player who loses suffers the cuse of the TENGU!
+  
+  blah
+blah
+blah -->
