Almost done implementing ofuda.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1 class="about">About</h1>
     <img src="tenguCenter.png" class="tengu-img" />
     <main>
+      <img class="ofuda--0 hidden btn" src="ofuda.png" />
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1 <br />Total Score:</h2>
         <p class="score" id="score--0">0</p>
@@ -34,6 +35,7 @@
           <p class="current-score" id="current--1">0</p>
         </div>
       </section>
+      <img class="ofuda--1 hidden btn" src="ofuda.png" />
 
       <img src="cardBack.png" alt="Magical cards" class="card" />
       <!-- <img src="dice-5.png" alt="Playing dice" class="card" /> -->
