Uploading stand-in images for test play

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div class="overlay hidden"></div>
     <div class="modal-window modal-how-to hidden">
-      <button class="close-modal">&times;</button>
+      <button class="close-modal close-modal-how">&times;</button>
       <h1 style="font-size: 3rem">How to play</h1>
       <p style="font-size: 2rem">
         TENGU is a competitive game of strategy and chance where two players
