--- a/index.html
+++ b/index.html
@@ -87,7 +87,91 @@
         earned this round and your turn is over. The game continues for five or
         ten rounds (as determined by user settings), and the player who has the
         most points after the final round wins! The player who loses suffers the
-        cuse of the TENGU!
+        curse of the TENGU!
+      </p>
+    </div>
+    <div class="modal-window modal-lore hidden">
+      <button class="close-modal close-lore">&times;</button>
+      <h1 style="font-size: 3rem">Lore</h1>
+      <p style="font-size: 2rem">
+        Each of the cards in this game is inspired by a Japanese folktale. The
+        effects of each card are thematically based on the content of the
+        stories. Below is a short summary of the story from each card. I
+        encourage you to do a Google search to find more details on any story
+        you are interested in!
+        <br />
+        TENGU: A typically malevolent, supernatural, human-like creature who
+        appears in many different folktales. The nature of his magical abilities
+        and personality often differ from story to story, but his red skin and
+        long nose are found in most typical depictions.
+        <br />
+        <!-- Momotarou: The story of a boy found in a peach by an elderly couple, who
+        grows into a strong warrior and befriends a dog, pheasant, and monkey to
+        vanquish demons who had been plaguing the countryside.
+        <br />
+        Urashima Tarou: The story of a young fisherman who saves a turtle and is
+        rewarded by being taken to a magical palace below the sea. Time sits
+        still in the palace and when he returns to land, he realizes that
+        hundreds of years have passed.
+        <br />
+        Kintarou: The story of a boy who is friends with the creatures of the
+        forest and famously beats a bear in a sumo wrestling bout. Supposedly
+        based on the legend of an actual historical figure who was known to be a
+        great samurai warrior.
+        <br />
+        Monkey-Crab Quarrel: A famous folktale about a story of vengence after a
+        monkey's unjust assault on a crab. The monkey is paid back twice over
+        for his foul deeds against the crab.
+        <br />
+        Bunbuku Chagama: The story of a magical tanuki who shapeshifts into an
+        ornamented tea kettle in order to try to repay a favor to a Buddhist
+        priest.
+        <br />
+        Sanmai no Ofuda: A young priest is sent to the mountain to collect some
+        flowers. He ends up encountering the demon-witch, ONIBABA. He makes use
+        of three protective "ofuda" (sacred paper charms) in his attempt to
+        escape from her.
+        <br />
+        Kobu-tori Jiisan: An old man with a lump hanging from his cheek gets
+        stuck outside in a storm one night, and encounters a gathering of
+        dancing monsters. He dances for the monsters, who remove the lump on his
+        face. Another old man with a lump on his face attempts to receive the
+        same favor, but ends up with different results.
+        <br />
+        Kamo-tori Gonbei: The hunter, Gonbei, is always looking for tricks to
+        capture more ducks with less effort. One day he schemes a way to catch
+        100 ducks at once, but things quickly end up getting carried away.
+        <br />
+        Warashibe Chouja: The story of a poor young man who ends up finding a
+        way to turn a piece of straw into a fortune.
+        <br />
+        Kasa Jizou: A poor elderly man is rewarded for his piety and generosity
+        when he donates his hats to cover the heads of Buddhist statues.
+        <br />
+        Issunboushi: A childless couple is blessed with a child who happens to
+        be only an inch-tall. He grows into an ambitious young man, though no
+        larger than the size of a thumb. He works hard, and his bravery and
+        loyalty are eventually rewarded when a magic spell turns him into a
+        full-sized adult.
+        <br />
+        Tsuru no Ongaeshi: A poor elderly man saves a crane from a trap. Some
+        days later, a young woman shows up at his house and begins to make fine
+        garments for him. The girl continues to work on the condition that he
+        never peeks in the room as she's working. It turns out the young woman
+        is actually the crane who is using her own feathes to make fabric to
+        repay the favor to the man.
+        <br />
+        Ikkyuu-san: Ikkyuu-san is a character who appears in a variety of
+        Japanese folktales made for children. He was an actual historical
+        figure, who was a renowned as a Buddhist monk and poet. Folktales of
+        young Ikkyuu-san typically depict him as mischievous and clever, usually
+        using some trick to outwit the adults around him.
+        <br />
+        Omusubi Kororin: An elderly peasant accidentally drops his riceball
+        lunch down a hole where mice are gleefully singing and making mochi. He
+        is rewarded for his good nature toward the mice with treasure. His
+        greedy nextdoor neighbor attempts to receive treasure from the mice as
+        well, but is punished for his greediness. -->
       </p>
     </div>
     <div class="overlay hidden"></div>
@@ -95,14 +179,3 @@
     <p class="copyright">Copyright Tai Arima ©2023</p>
   </body>
 </html>
-<!-- TENGU is a competitive game of strategy and chance where two players face-off to see who can earn more points. 
-  A player begins their turn by drawing one card. Each card has an associated point value, and may have additional effects, or a spell that 
-  the player can use if they wish. Read the cards carefully to make sure you understand each card's effects and spells.
-  After drawing a card, you can decide to draw another card, or "hold". If you decide to "hold", your current score will be added to your total score,
-  and the next player's turn will begin. A player's turn continues until they decide to "hold" or until they draw the TENGU! Beware of the TENGU! If you draw
-  the TENGU card, you lose all points you earned this round and your turn is over. The game continues for five or ten rounds (as determined by user settings),
-  and the player who has the most points after the final round wins! The player who loses suffers the cuse of the TENGU!
-  
-  blah
-blah
-blah -->
