Fixed the bug with round end game state.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <title>Tengu</title>
   </head>
   <body>
-    
-    <!-- <div class="top-bar"></div> -->
     <textarea class="log hidden" readonly></textarea>
-    
     <h1 class="about top-bar">About</h1>
     <h1 class="how-to top-bar">How to play</h1>
     <h1 class="lore top-bar">Lore</h1>
@@ -44,9 +41,7 @@
         </div>
       </section>
       <img class="ofuda--1 hidden btn" src="ofuda.png" />
-
       <img src="cardBack.png" alt="Magical cards" class="card" />
-      <!-- <img src="dice-5.png" alt="Playing dice" class="card" /> -->
       <button class="btn btn--new">🆕 New game</button>
       <button class="btn btn--spell hidden">🔮 Use Spell</button>
       <button class="btn btn--draw hidden">🀄 Draw Card</button>
@@ -54,7 +49,7 @@
       <button class="btn btn--turn hidden">▶️ Start next turn</button>
     </main>
     <button class="btn btn--log">📜 Show log</button>
-    <div class="modal-window modal-new hidden"> <!-- removed hidden--> 
+    <div class="modal-window modal-new hidden"> 
       <button class="close-modal close-new">&times;</button>
       <h1 style="font-size: 3rem; text-align: center">New Game</h1>
       <p style="font-size: 2rem">
@@ -91,12 +86,6 @@
           <button type="button" class="submit-button">Submit</button>
         </form>
       </p>
-      <!-- <form id="new-game-form">
-        Player 1 Username: <input type="text" name="username1" /> Player 2
-        Username:
-        <input type="text" />
-        <input type="submit" value="Submit" />
-      </form> -->
     </div>
     <div class="modal-window modal-about hidden">
       <button class="close-modal">&times;</button>
@@ -111,12 +100,6 @@
         Copyright © 2023 Tai Arima and Sayalee Karkare <br />
         ALL RIGHTS RESERVED
       </p>
-      <!-- <form id="new-game-form">
-        Player 1 Username: <input type="text" name="username1" /> Player 2
-        Username:
-        <input type="text" />
-        <input type="submit" value="Submit" />
-      </form> -->
     </div>
     <div class="overlay hidden"></div>
     <div class="modal-window modal-how-to hidden">
