Fixed a small error in "how to play" explanation.

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
         your total score, and the next player's turn will begin. A player's turn
         continues until they decide to "hold" or until they draw the TENGU!
         Beware of the TENGU! If you draw the TENGU card, you lose all points you
-        earned this round and your turn is over. The game continues for five or
-        ten rounds (as determined by user settings), and the player who has the
-        most points after the final round wins! The player who loses suffers the
-        curse of the TENGU!
+        earned this round and your turn is over. You can choose how many rounds 
+        you wish to play or an amount of points the game will be played to. The 
+        player with the most points at the end of the game wins! The player who 
+        loses suffers the curse of the TENGU!
       </p>
     </div>
     <div class="modal-window modal-lore hidden">
