--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="tenguCenter.png" class="tengu-img" />
     <main>
       <div class="rounds-animation hidden">Round 1</div>
-      <img class="ofuda--0 hidden btn" src="ofuda.png" />
+      <img class="ofuda--0 hidden btn" id="ofuda--0"  src="ofuda.png" />
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1</h2>
         <br /><h2 class="total-score-label">Total Score:</h2>
@@ -40,7 +40,7 @@
           <p class="current-score" id="current--1">0</p>
         </div>
       </section>
-      <img class="ofuda--1 hidden btn" src="ofuda.png" />
+      <img class="ofuda--1 hidden btn" id="ofuda--1" src="ofuda.png" />
       <img src="cardBack.png" alt="Magical cards" class="card" />
       <button class="btn btn--new">🆕 New game</button>
       <button class="btn btn--spell hidden">🔮 Use Spell</button>
