Started working on online multiplayer.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
     </main>
     <button class="btn btn--log">📜 Show log</button>
     <div class="modal-window modal-new hidden"> 
-      <button class="close-modal close-new">&times;</button>
+      <button class="close-modal close-new">&times;</button>  
       <h1 style="font-size: 3rem; text-align: center">New Game</h1>
+
       <p style="font-size: 2rem">
         <form style="font-size: 2rem">
           <br>
@@ -247,3 +248,21 @@
     
   </body>
 </html>
+
+
+<!-- Try adding this content later:
+<p style="text-align: center;"><b>Choose your game mode:</b></p>
+<br>
+<div class="container">
+  <button type="button" class="form-button btn--local">Local</button>
+  <button type="button" class="form-button btn--online">Online</button>
+</div>
+<br>
+<div class="online-options hidden">
+  <p style="text-align: center;"><b>Choose your online option:</b></p>
+  <br>
+  <div class="container">
+    <button type="button" class="form-button btn--create">Create Game</button>
+    <button type="button" class="form-button btn--join">Join Game</button>
+  </div>
+</div> -->
