--- a/index.html
+++ b/index.html
@@ -92,13 +92,12 @@
       <button class="close-modal">&times;</button>
       <h1 style="font-size: 3rem">About</h1>
       <p style="font-size: 2rem">
-        Programming by Tai Arima. Art by Sayalee Karkare. Inspired by course
-        content created by Jonas Schmedtmann.
+        Programming by Tai Arima. Art by Sayalee Karkare.
         <br />
         This game was programmed using JavaScript, HTML, and CSS.
         <br />
 
-        Copyright © 2023 Tai Arima and Sayalee Karkare <br />
+        Copyright © 2023 Tai Arima <br />
         ALL RIGHTS RESERVED
       </p>
     </div>
@@ -241,6 +240,14 @@
         <br />
         <a href="mailto: taiarima0@gmail.com">Send me a message!</a>
       </p>
+    </div>
+    <!-- Experimenting -->
+    <div id="custom-alert" class="custom-alert">
+      <div class="custom-alert-content">
+        <h1>Disclaimer</h1>
+        <p>This site is still under construction. Currently screen resolutions less than 1500px wide are not fully supported. Click the button below to acknowledge that you are accessing pre-release content.</p>
+        <button id="custom-alert-close" class="custom-alert-close">Yes, I understand</button>
+      </div>
     </div>
     <div class="overlay hidden"></div>
     <script src="script.js"></script>
