--- a/old-index.html
+++ b/old-index.html
@@ -8,25 +8,36 @@
     <title>Tengu</title>
   </head>
   <body>
-    <nav>
-      <h1 class="about top-bar">About</h1>
-      <h1 class="how-to top-bar">Rules</h1>
-      <img src="tenguCenter.png" class="tengu-img" />
-      <h1 class="lore top-bar">Lore</h1>
-      <h1 class="help top-bar">Help</h1>
-      <img class="hamburger-button" src="hamburgerButtonImg.png"/>
-    </nav>
     <textarea class="log hidden" readonly></textarea>
+    <h1 class="about top-bar">About</h1>
+    <h1 class="how-to top-bar">How to play</h1>
+    <h1 class="lore top-bar">Lore</h1>
+    <h1 class="help top-bar">Help</h1>
+    <img src="tenguCenter.png" class="tengu-img" />
     <main>
       <div class="rounds-animation hidden">Round 1</div>
       <img class="ofuda--0 hidden btn" id="ofuda--0"  src="ofuda.png" />
-      <section class="play-area">
-        <div class="active-player-area">
-          <div class="active-p-score"></div>
-          <div class="card-area"></div>
+      <section class="player player--0 player--active">
+        <h2 class="name" id="name--0">Player 1</h2>
+        <br /><h2 class="total-score-label">Total Score:</h2>
+        <p class="score" id="score--0">0</p>
+        <p class="round-msg hidden" id="msg--0">Player 1 wins!</p>
+        <div class="current">
+          <p class="current-label">Current round:</p>
+          <p class="current-score" id="current--0">0</p>
         </div>
-        <div class="waiting-player-area">
-          <div class="waiting-p-score"></div>
+      </section>
+      <section class="player player--1">
+        <h2 class="name" id="name--1">
+          Player 2 
+        </h2>
+        <br />
+         <h2 class="total-score-label">Total Score:</h2> 
+        <p class="score" id="score--1">0</p>
+        <p class="round-msg hidden" id="msg--1">Player 2 wins!</p>
+        <div class="current">
+          <p class="current-label">Current round:</p>
+          <p class="current-score" id="current--1">0</p>
         </div>
       </section>
       <img class="ofuda--1 hidden btn" id="ofuda--1" src="ofuda.png" />
@@ -37,7 +48,7 @@
       <button class="btn btn--hold hidden">⏹️ Hold</button>
       <button class="btn btn--turn hidden">▶️ Start next turn</button>
     </main>
-    <!-- <button class="btn btn--log">📜 Show log</button> -->
+    <button class="btn btn--log">📜 Show log</button>
     <div class="modal-window modal-new hidden"> 
       <button class="close-modal close-new">&times;</button>  
       <h1 style="font-size: 3rem; text-align: center">New Game</h1>
@@ -240,12 +251,9 @@
     </div>
     <div class="overlay hidden"></div>
     <script src="script.js"></script>
-    
+    <p class="copyright">Copyright Tai Arima ©2023</p>
     
   </body>
-  <footer>
-    <p class="copyright">Copyright Tai Arima ©2023</p>
-  </footer>
 </html>
 
 
